@@ -45,6 +45,10 @@ Breaking Changes
 Changes
 =======
 
+- Added 'epoch' argument to the extract function which returns the number of
+  seconds since Jan 1, 1970. For example:
+  ``extract(epoch from '1970-01-01T00:00:01')`` returns ``1.0`` seconds.
+
 - Fixed and issue that could cause incorrect results for a ``join`` query with
   order by due to the push down optimisation.
 
